default/objects/Emarsys_Contact_Subscriptions__c/Emarsys_Contact_Subscriptions__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Emarsys Contact Subscriptions</label>
</CustomObject>