default/objects/Emarsys_Contact_Subscriptions__c/fields/Contact_List_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_List_Id__c</fullName>
    <label>Contact List Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>