default/objects/Emarsys_Contact_Subscriptions__c/fields/Email_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Name__c</fullName>
    <description>Emarsys email category / email name</description>
    <label>Email Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>