default/objects/Emarsys_Contact_Subscriptions__c/fields/Last_Update_Segment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Segment_Date__c</fullName>
    <label>Last Update Segment Date</label>
    <type>DateTime</type>
</CustomField>