default/objects/Emarsys_Contact_Subscriptions__c/fields/Run_id__c.field-meta.xml
<CustomField>
    <fullName>Run_id__c</fullName>
    <label>Run_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>