default/objects/Emarsys_Contact_Subscriptions__c/fields/Segment_Id__c.field-meta.xml
<CustomField>
    <fullName>Segment_Id__c</fullName>
    <label>Segment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>