default/objects/Emarsys_Contact_Subscriptions__c/fields/Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Name__c</fullName>
    <label>Subscription Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>