default/objects/Emarsys_Contact_Subscriptions__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>